--- a/analysis/.gitignore
+++ b/analysis/.gitignore
@@ -1,6 +1,13 @@
+.httr-oauth
+.google_API_keys
+*.Rproj
 *.Rproj.user
 *.Rhistory
-*.RData
-preprocessing.html
-*.Rproj
-output/*
+*.Rdata
+*.Rprofile
+*.html
+auth
+.~lock*
+manifest.R
+output/ignore/*
+input/ignore/*
